--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,9 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
+  /* max-width: 1440px; */
+  min-height: 100vh;
+  margin: 0 auto;
   font-family: Raleway, sans-serif;
 }
 
@@ -20,7 +22,8 @@ p,
 ul,
 ol,
 li,
-blockquote {
+blockquote,
+address {
   margin: 0;
   padding: 0;
 }
