--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,8 @@
 }
 
 .lots__heading {
+  margin-bottom: 27px;
+  margin-left: 26px;
   color: #000;
   font-family: Raleway;
   font-weight: 700;
@@ -190,8 +192,6 @@
   font-style: normal;
   line-height: normal;
   text-transform: uppercase;
-  margin-left: 26px;
-  margin-bottom: 27px;
 }
 
 .lots__card-list {
@@ -261,10 +261,66 @@
   margin: 30px 0 2px 26px;
   color: #000;
   font-family: Raleway;
+  font-weight: 400;
   font-size: 20px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
-  text-underline-offset: 5px;
   text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.about {
+  display: grid;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px;
+  padding: 0 24px;
+  grid-template: auto / repeat(3, 1fr);
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  grid-column: span 2;
+  justify-content: space-between;
+}
+
+.about__logo {
+  display: flex;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  padding: 46px;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about__title {
+  margin: 100px 0;
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  font-style: normal;
+  line-height: normal;
+  word-wrap: break-word;
 }
