--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* место для вашего кода */
+/* HEADER */
 .header {
   display: grid;
   justify-content: space-between;
@@ -8,6 +8,7 @@
   grid-template: auto / 1fr auto 1fr;
 }
 
+/* Стили меню гавигации в шапке */
 .header__menu {
   display: block;
 }
@@ -41,6 +42,7 @@
   text-underline-offset: 5px;
 }
 
+/* Стили логотипа в шапке */
 .header__logo {
   display: block;
   width: 148px;
@@ -54,8 +56,9 @@
 
 .header__address {
   justify-self: end;
-  max-width: 240px;
 }
+
+/* address */
 .address {
   color: #000;
   font-family: Raleway;
@@ -69,6 +72,7 @@
   text-underline-offset: 4px;
 }
 
+/* MAIN */
 .main {
   display: flex;
   flex-direction: column;
@@ -76,6 +80,7 @@
   margin: 0 auto;
 }
 
+/* COVER */
 .cover {
   display: flex;
   flex-direction: column;
@@ -107,7 +112,7 @@
   background: #000;
   transition: 0.5s;
 }
-
+/* Стили Заголовка */
 .cover__title {
   display: flex;
   flex-direction: column;
@@ -140,12 +145,14 @@
   letter-spacing: 0;
 }
 
+/* Стили текста */
 .cover__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 135px;
 }
+
 .cover__description-text {
   flex: 1 0 auto;
   align-self: center;
@@ -175,6 +182,7 @@
   cursor: pointer;
 }
 
+/* LOTS */
 .lots {
   display: flex;
   flex-direction: column;
@@ -194,6 +202,7 @@
   text-transform: uppercase;
 }
 
+/* Карточки */
 .lots__card-list {
   display: flex;
   flex-wrap: wrap;
@@ -257,6 +266,7 @@
   word-wrap: break-word;
 }
 
+/* More Lots */
 .lots__look-more-link {
   margin: 30px 0 2px 26px;
   color: #000;
@@ -269,6 +279,7 @@
   text-underline-offset: 5px;
 }
 
+/* ABOUT */
 .about {
   display: grid;
   flex-direction: column;
@@ -325,6 +336,67 @@
   word-wrap: break-word;
 }
 
+/* FOOTER */
 .footer {
-  margin-top: 180px;
+  display: grid;
+  justify-content: space-between;
+  align-items: start;
+  margin-top: 90px;
+  padding: 90px 24px;
+  grid-template: auto / 1fr auto 1fr;
+}
+
+/* Меню навигации в футере */
+.footer__menu {
+  display: block;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__menu-list-item {
+  list-style: none;
+  list-style-position: inside;
+}
+
+.footer__menu-link {
+  color: #000;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: normal;
+  text-align: center;
+  text-decoration: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+/* Стили списка иконок в футере */
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-self: end;
+  gap: 48px;
+}
+
+.footer__social-list-item {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__social-link {
+  cursor: pointer;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+  object-fit: contain;
 }
