--- a/styles/style.css
+++ b/styles/style.css
@@ -44,14 +44,14 @@
 
 /* Стили логотипа в шапке */
 .header__logo {
-  display: block;
+  display: flex;
   width: 148px;
-  height: 100%;
+  height: 105px;
   text-decoration: none;
 }
 
 .header__logo-image {
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .header__address {
@@ -86,8 +86,9 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  height: 100%;
   padding: 165px 24px 50px;
-  background-image: url(../images/cover.jpg);
+  background-image: url(../images/cover-new.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -124,19 +125,22 @@
   font-weight: 700;
   font-size: 100px;
   font-style: normal;
-  line-height: 115%;
+  line-height: 100px;
   letter-spacing: 30px;
   text-transform: uppercase;
 }
 
 .aligned-text_center {
   align-self: center;
+  text-align: center;
 }
 
 .aligned-text_right {
   align-self: end;
 }
-
+.line-height-extended {
+  line-height: 115px;
+}
 .letter-spacing-extended {
   letter-spacing: 60px;
 }
@@ -145,7 +149,7 @@
   letter-spacing: 0;
 }
 
-/* Стили текста */
+/* Стили подзаголовка */
 .cover__description {
   display: flex;
   flex-direction: row;
@@ -163,7 +167,7 @@
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
-  word-spacing: 22px;
+  word-spacing: 1.1rem;
 }
 
 .bet-button {
@@ -392,11 +396,12 @@
 }
 
 .footer__social-link {
+  display: block;
   cursor: pointer;
+  width: 48px;
+  height: 48px;
 }
 
 .footer__social-icon {
-  width: 48px;
-  height: 48px;
   object-fit: contain;
 }
