--- a/styles/global.css
+++ b/styles/global.css
@@ -6,9 +6,10 @@
 
 body {
   min-width: 1100px;
-  max-width: 1100px;
+  width: 1100px;
   min-height: 100vh;
   margin: 0 auto;
+  padding: 0;
   font-family: Raleway, sans-serif;
 }
 
