--- a/styles/global.css
+++ b/styles/global.css
@@ -7,9 +7,9 @@
 body {
   min-width: 1100px;
   min-height: 100vh;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
-  font-family: Raleway, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h1,
