--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@
   width: 100%;
   height: 100%;
   padding: 165px 24px 50px;
-  background-image: url(../images/cover-new.jpeg);
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -152,14 +152,14 @@
 /* Стили подзаголовка */
 .cover__description {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: end;
   margin-top: 135px;
+  gap: 78px;
 }
 
 .cover__description-text {
-  flex: 1 0 auto;
   align-self: center;
+  justify-self: center;
   color: #fff;
   font-weight: 400;
   font-size: 22px;
@@ -228,12 +228,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 30px;
   min-height: 100%;
   padding: 50px 40px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  gap: 30px
 }
 
 .card_type_film {
@@ -398,11 +398,22 @@
 
 .footer__social-link {
   display: block;
-  cursor: pointer;
   width: 48px;
   height: 48px;
+  cursor: pointer;
 }
 
 .footer__social-icon {
   object-fit: contain;
+}
+
+@media screen and (min-width: 1150px) {
+  .header,
+  .cover,
+  .lots,
+  .about,
+  .footer {
+    padding-right: 50px;
+    padding-left: 50px;
+  }
 }
